--- a/js/views/scrape.ejs
+++ b/js/views/scrape.ejs
@@ -51,6 +51,10 @@
             <button class="ui primary button" id="searchBtn">
               Search
             </button>
+
+            <button class="ui primary button" id="sfBtn">
+              Salesforce
+            </button>
         </div>
     </div>
     <div class="ui segment">
