--- a/js/views/scrape.ejs
+++ b/js/views/scrape.ejs
@@ -18,7 +18,7 @@
       <a href="/contacts" class="item">
         Contacts
       </a>
-      <a class="item">
+      <a href="/settings" class="item">
         Settings
       </a>
 
