--- a/js/views/contacts.ejs
+++ b/js/views/contacts.ejs
@@ -18,7 +18,7 @@
       <a class="active item">
         Contacts
       </a>
-      <a class="item">
+      <a href="/settings" class="item">
         Settings
       </a>
 
