--- a/js/views/scrape.ejs
+++ b/js/views/scrape.ejs
@@ -5,9 +5,11 @@
     <title>10,000 Leads | Crawler</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="js/main.js"></script> 
+    <script src="js/alertify.js"></script>
 
     <link rel="stylesheet" type="text/css" href="ui/semantic.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/alertify.css">
     <script src="ui/semantic.min.js"></script>
 </head>
 <body>
