--- a/js/views/index.ejs
+++ b/js/views/index.ejs
@@ -125,7 +125,7 @@
           <p>Save contacts for future follow-up, create custom contact lists, mark notes and more. </p>
         </div>
         <div class="six wide right floated column">
-          <img src="img/capture.png" class="ui large bordered rounded image">
+          <img src="img/Capture.PNG" class="ui large bordered rounded image">
         </div>
       </div>
       <div class="row">
@@ -162,7 +162,7 @@
 
     <div class="ui img container">
         <br>
-        <img src="img/mainscreen.png" alt="" class="ui fluid bordered rounded image">
+        <img src="img/mainscreen.PNG" alt="" class="ui fluid bordered rounded image">
         <br>
     </div>
 
