--- a/js/views/index.ejs
+++ b/js/views/index.ejs
@@ -135,7 +135,43 @@
       </div>
     </div>
   </div>
-
+    
+    <div class="ui vertical stripe segment">
+        <div class="ui text container">
+          <h3 class="ui header">Feature Rich</h3>
+          <p>From Salesforce integration to extensive deep searching, 10,000 Leads is the best choice for creating new leads, fast.</p>
+          <div class="ui list">
+              <a class="item">
+                <i class="right triangle icon"></i>
+                <div class="content">
+                  <div class="header">Salesforce Integration</div>
+                  <div class="description">With a click of a button you can instantly create and save a new lead to your Salesforce instance for future follow up.</div>
+                </div>
+              </a>
+              <a class="item">
+                <i class="right triangle icon"></i>
+                <div class="content">
+                  <div class="header">Email Search</div>
+                  <div class="description">Automatically crawl company websites to search for email addresses for easy contact.</div>
+                </div>
+              </a>
+              <a class="item">
+                <i class="right triangle icon"></i>
+                <div class="content">
+                  <div class="header">Contact Database</div>
+                  <div class="description">Save all interesting or potential leads to a contact database unique to your account.</div>
+                </div>
+              </a>
+              <a class="item">
+                <i class="right triangle icon"></i>
+                <div class="content">
+                  <div class="header">Fast Generation</div>
+                  <div class="description">Instantly gather a list of 1,000+ potential leads for any location and keyword combination in seconds.</div>
+                </div>
+              </a>
+        </div>
+        </div>
+      </div>
 
   <div class="ui vertical stripe quote segment">
     <div class="ui equal width stackable internally celled grid">
