--- a/js/views/payment.ejs
+++ b/js/views/payment.ejs
@@ -10,6 +10,38 @@
     <script src="ui/semantic.min.js"></script>
 </head>
 <body>
+
+  <!-- Following Menu -->
+  <div class="ui large top fixed hidden menu">
+    <div class="ui container">
+      <a class="active item">Home</a>
+      <a class="item" href="/scraper">Crawler</a>
+
+      <div class="right menu">
+          <% if (user) { %>
+              <div class="item">
+                  <a class="ui button" href="/logout">Logout <%= user.local.email %></a>
+              </div>
+          <% } else { %>
+              <div class="item">
+                  <a class="ui button" href="/login">Log in</a>
+              </div>
+              <div class="item">
+                  <a class="ui primary button" href="/signup">Sign Up</a>
+              </div>
+          <% } %>
+      </div>
+    </div>
+  </div>
+
+  <!-- Sidebar Menu -->
+  <div class="ui vertical inverted sidebar menu">
+    <a class="active item" href="/">Home</a>
+    <a class="item" href="/scraper">Crawler</a>
+    <a class="item" href="/login">Login</a>
+    <a class="item" href="/signup">Signup</a>
+  </div>
+
     <div class="ui middle aligned center aligned grid">
       <div class="column">
         <h2 class="ui teal header">
