--- a/js/views/scrape.ejs
+++ b/js/views/scrape.ejs
@@ -79,6 +79,7 @@
                 <th>Postal</th>
                 <th>Phone</th>
                 <th>Website</th>
+                <th>Email</th>
             </tr>
         </thead>
           <tbody id="tbody">
