--- a/js/views/scrape.ejs
+++ b/js/views/scrape.ejs
@@ -68,9 +68,10 @@
         </div>
 
 
-      <table class="ui celled table">
+      <table class="ui compact celled definition table">
         <thead>
             <tr id="headers">
+                <th></th>
                 <th>Actions</th>
                 <th>Title</th>
                 <th>Address</th>
@@ -84,6 +85,16 @@
           <tbody id="tbody">
             
           </tbody>
+          <tfoot class="full-width">
+            <tr>
+              <th></th>
+              <th colspan="4">
+                <div class="ui small button">
+                  Save
+                </div>
+              </th>
+            </tr>
+          </tfoot>
         </table>
 
     </div>
