--- a/js/views/scrape.ejs
+++ b/js/views/scrape.ejs
@@ -88,8 +88,11 @@
             <tr>
               <th></th>
               <th colspan="4">
-                <div class="ui small button">
+                <div class="ui small button" id="saveBtn">
                   Save
+                </div>
+                <div class="ui small button" id="selectAll">
+                  Select All
                 </div>
               </th>
             </tr>
