--- a/js/views/scrape.ejs
+++ b/js/views/scrape.ejs
@@ -88,7 +88,7 @@
             <tr>
               <th></th>
               <th colspan="4">
-                <div class="ui small button" id="saveBtn">
+                <div class="ui small disabled button" id="saveBtn">
                   Save
                 </div>
                 <div class="ui small button" id="selectAll">
