--- a/js/views/scrape.ejs
+++ b/js/views/scrape.ejs
@@ -91,8 +91,14 @@
                 <div class="ui small disabled button" id="saveBtn">
                   Save
                 </div>
-                <div class="ui small button" id="selectAll">
+                <div class="ui small green button" id="selectAll">
                   Select All
+                </div>
+                <div class="ui small red button" id="selectNone">
+                  Select None
+                </div>
+                <div id="pullEmails" class="ui right floated small primary labeled icon button">
+                    <i class="mail icon"></i> Get Emails
                 </div>
               </th>
             </tr>
