--- a/js/views/scrape.ejs
+++ b/js/views/scrape.ejs
@@ -11,7 +11,124 @@
     <script src="ui/semantic.min.js"></script>
 </head>
 <body>
-    <div class="ui pointing menu">
+
+    <div class="ui top attached tabular menu">
+      <a class="item active" data-tab="first">Crawler</a>
+      <a class="item" data-tab="second">Contacts</a>
+      <a class="item" data-tab="third">Emails</a>
+      <a class="item" data-tab="forth">Settings</a>
+    </div>
+    <div class="ui bottom attached tab segment" data-tab="first">
+        <% if (user.local.active_until > new Date()) { %>
+            <div class="ui grid">
+                <div class="row eight wide column">
+                    <div class="ui search what" >
+                      <div class="ui icon input" id="divsearchwhat">
+                        <input id="searchinputwhat" class="prompt" type="text" placeholder="Search keywords...">
+                        <i class="search icon"></i>
+                      </div>
+                      <div class="results"></div>
+                    </div>
+
+                <div class="ui search where" >
+                      <div class="ui icon input" id="divsearchwhere">
+                        <input id="searchinputwhere" class="prompt" type="text" placeholder="Location">
+                        <i class="search icon"></i>
+                      </div>
+                      <div class="results"></div>
+                    </div>
+                
+                    <button class="ui primary button" id="searchBtn">
+                      Search
+                    </button>
+                </div>
+            </div>
+            <div class="ui segment">
+              <div id="loaderdiv" class="ui inverted dimmer">
+                <div  class="ui text loader">Loading</div>
+              </div>
+
+              <div class="ui horizontal statistic">
+                  <div id="results" class="value">
+                    
+                  </div>
+                  <div class="label">
+                    Results 
+                  </div>
+                </div>
+
+
+              <table class="ui compact celled definition table">
+                <thead>
+                    <tr id="headers">
+                        <th></th>
+                        <th>Title</th>
+                        <th>Address</th>
+                        <th>City</th>
+                        <th>Region</th>
+                        <th>Postal</th>
+                        <th>Phone</th>
+                        <th>Website</th>
+                    </tr>
+                </thead>
+                  <tbody id="tbody">
+                    
+                  </tbody>
+                  <tfoot class="full-width">
+                    <tr>
+                      <th></th>
+                      <th colspan="7">
+                        <div class="ui small disabled button" id="saveBtn">
+                          Save
+                        </div>
+                        <div class="ui small green button" id="selectAll">
+                          Select All
+                        </div>
+                        <div class="ui small red button" id="selectNone">
+                          Select None
+                        </div>
+                        <div id="pullEmails" class="ui right floated small primary labeled icon button">
+                            <i class="mail icon"></i> Get Emails
+                        </div>
+                      </th>
+                    </tr>
+                  </tfoot>
+                </table>
+
+            </div>
+            <% } else { %>
+                   <div class="ui middle aligned center aligned grid">
+
+                      <div class="">
+                      <br>
+                      <br>
+                        <h2 class="ui teal image header">
+                          <div class="content">
+                            Error
+                          </div>
+                        </h2>
+
+                        <div class="ui message">
+                          <div class="header">
+                            Error
+                          </div>
+                          <p>You are not a member and therefore cannot use the crawler tool. <a href="/payment">Join us for unlimited access!</a></p>
+                        </div> 
+                      </div>
+                    </div>
+            <% } %>
+    </div>
+    <div class="ui bottom attached tab segment" data-tab="second">
+      Second
+    </div>
+    <div class="ui bottom attached tab segment active" data-tab="third">
+      Third
+    </div>
+    <div class="ui bottom attached tab segment active" data-tab="forth">
+      Fourth
+    </div>
+
+    <!-- <div class="ui pointing menu">
       <a class="active item">
         Crawler
       </a>
@@ -27,106 +144,9 @@
             <a class="ui button" href="/logout">Logout <%= user.local.email %></a>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <% if (user.local.active_until > new Date()) { %>
-    <div class="ui grid">
-        <div class="row eight wide column">
-            <div class="ui search what" >
-              <div class="ui icon input" id="divsearchwhat">
-                <input id="searchinputwhat" class="prompt" type="text" placeholder="Search keywords...">
-                <i class="search icon"></i>
-              </div>
-              <div class="results"></div>
-            </div>
-
-        <div class="ui search where" >
-              <div class="ui icon input" id="divsearchwhere">
-                <input id="searchinputwhere" class="prompt" type="text" placeholder="Location">
-                <i class="search icon"></i>
-              </div>
-              <div class="results"></div>
-            </div>
-        
-            <button class="ui primary button" id="searchBtn">
-              Search
-            </button>
-        </div>
-    </div>
-    <div class="ui segment">
-      <div id="loaderdiv" class="ui inverted dimmer">
-        <div  class="ui text loader">Loading</div>
-      </div>
-
-      <div class="ui horizontal statistic">
-          <div id="results" class="value">
-            
-          </div>
-          <div class="label">
-            Results 
-          </div>
-        </div>
-
-
-      <table class="ui compact celled definition table">
-        <thead>
-            <tr id="headers">
-                <th></th>
-                <th>Title</th>
-                <th>Address</th>
-                <th>City</th>
-                <th>Region</th>
-                <th>Postal</th>
-                <th>Phone</th>
-                <th>Website</th>
-            </tr>
-        </thead>
-          <tbody id="tbody">
-            
-          </tbody>
-          <tfoot class="full-width">
-            <tr>
-              <th></th>
-              <th colspan="7">
-                <div class="ui small disabled button" id="saveBtn">
-                  Save
-                </div>
-                <div class="ui small green button" id="selectAll">
-                  Select All
-                </div>
-                <div class="ui small red button" id="selectNone">
-                  Select None
-                </div>
-                <div id="pullEmails" class="ui right floated small primary labeled icon button">
-                    <i class="mail icon"></i> Get Emails
-                </div>
-              </th>
-            </tr>
-          </tfoot>
-        </table>
-
-    </div>
-    <% } else { %>
-           <div class="ui middle aligned center aligned grid">
-
-              <div class="">
-              <br>
-              <br>
-                <h2 class="ui teal image header">
-                  <div class="content">
-                    Error
-                  </div>
-                </h2>
-
-                <div class="ui message">
-                  <div class="header">
-                    Error
-                  </div>
-                  <p>You are not a member and therefore cannot use the crawler tool. <a href="/payment">Join us for unlimited access!</a></p>
-                </div> 
-              </div>
-            </div>
-    <% } %>
+   
 
     <script src="js/main.js"></script> 
     <script src="js/alertify.js"></script>
