--- a/js/views/scrape.ejs
+++ b/js/views/scrape.ejs
@@ -273,5 +273,7 @@
 
     <script src="js/main.js"></script> 
     <script src="js/alertify.js"></script>
+    <script src="js/settings.js"></script> 
+    <script src="js/contact.js"></script> 
 </body>
 </html>
