--- a/js/views/scrape.ejs
+++ b/js/views/scrape.ejs
@@ -139,7 +139,7 @@
                     <th>Website</th>
                 </tr>
             </thead>
-              <tbody id="tbody">
+              <tbody id="contact_tbody">
                 
               </tbody>
             </table>
