--- a/js/views/scrape.ejs
+++ b/js/views/scrape.ejs
@@ -95,6 +95,12 @@
                         <div id="pullEmails" class="ui right floated small primary labeled icon button">
                             <i class="mail icon"></i> Get Emails
                         </div>
+                        <div id="saveContacts" class="ui right floated small primary labeled icon button">
+                            <i class="save icon"></i> Save Contacts
+                        </div>
+                        <div id="" class="ui right floated small primary labeled icon button">
+                            <i class="download icon"></i> Export Data
+                        </div>
                       </th>
                     </tr>
                   </tfoot>
