--- a/js/views/scrape.ejs
+++ b/js/views/scrape.ejs
@@ -95,10 +95,10 @@
                         <div id="pullEmails" class="ui right floated small primary labeled icon button">
                             <i class="mail icon"></i> Get Emails
                         </div>
-                        <div id="saveContacts" class="ui right floated small primary labeled icon button">
+                        <div id="saveContacts" class="ui right floated small red labeled icon button">
                             <i class="save icon"></i> Save Contacts
                         </div>
-                        <div id="" class="ui right floated small primary labeled icon button">
+                        <div id="downloadBtn" class="ui right floated small green labeled icon button">
                             <i class="download icon"></i> Export Data
                         </div>
                       </th>
