--- a/js/views/scrape.ejs
+++ b/js/views/scrape.ejs
@@ -101,6 +101,9 @@
                         <div id="downloadBtn" class="ui right floated small green labeled icon button">
                             <i class="download icon"></i> Export Data
                         </div>
+                        <div id="saveBtn" class="ui right floated small yellow labeled icon button">
+                            <i class="share icon"></i> Save to Salesforce
+                        </div>
                       </th>
                     </tr>
                   </tfoot>
