--- a/js/views/scrape.ejs
+++ b/js/views/scrape.ejs
@@ -99,7 +99,7 @@
                             <i class="save icon"></i> Save Contacts
                         </div>
                         <div id="saveBtn" class="ui right floated small yellow labeled icon button">
-                            <i class="share icon"></i> Save to Salesforce
+                            <i class="send outline icon"></i> Save to Salesforce
                         </div>
                       </th>
                     </tr>
