--- a/js/views/scrape.ejs
+++ b/js/views/scrape.ejs
@@ -195,6 +195,9 @@
                     <div id="downloadBtn" class="ui right floated small green labeled icon button">
                         <i class="download icon"></i> Export Data
                     </div>
+                    <div id="deleteEmailsBtn" class="ui right floated small red labeled icon button">
+                        <i class="delete icon"></i> Delete All Emails
+                    </div>
                   </th>
                 </tr>
               </tfoot>
