--- a/js/views/index.ejs
+++ b/js/views/index.ejs
@@ -19,7 +19,6 @@
       $(document)
         .ready(function() {
 
-
             $('#getstarted, #checkitout').click(function() {
                 <% if (user) { %>
                     window.location.replace("/payment");
@@ -210,7 +209,7 @@
           <h4 class="ui inverted header">About</h4>
           <div class="ui inverted link list">
             <a href="#" class="item">Sitemap</a>
-            <a href="#" class="item">Contact Us</a>
+            <a href="mailto:scottryangilmour@gmail.com?Subject=Greetings" target="_top">Contact Us</a>
           </div>
         </div>
         <div class="three wide column">
