--- a/js/views/scrape.ejs
+++ b/js/views/scrape.ejs
@@ -15,7 +15,7 @@
     <div class="ui top attached tabular menu">
       <a class="item active" data-tab="first">Crawler</a>
       <a class="item" data-tab="second">Contacts</a>
-      <a class="item" data-tab="third">Emails</a>
+      <a id="emailTab" class="item" data-tab="third">Emails</a>
       <a class="item" data-tab="forth">Settings</a>
       <div class="right menu">
         <div class="item">
